set(LIB_NAME pslog)

file(GLOB_RECURSE HEADER_FILES	CONFIGURE_DEPENDS "*.h")
file(GLOB_RECURSE CPP_FILES		CONFIGURE_DEPENDS "*.cpp")

add_library(${LIB_NAME} STATIC 
	${HEADER_FILES}
	${CPP_FILES}
)
add_library(${PROJECT_NAMESPACE}::${LIB_NAME} ALIAS ${LIB_NAME})



source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" 
	FILES ${HEADER_FILES} ${CPP_FILES}
)
target_include_directories(${LIB_NAME}
	INTERFACE
		$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/>
		$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_INSTALL_PREFIX}/${LIB_NAME}>
	PUBLIC
		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
)
install(DIRECTORY ./
	DESTINATION
		${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_INSTALL_PREFIX}/${LIB_NAME}
	FILES_MATCHING
		PATTERN "*.h"
)

install(TARGETS ${LIB_NAME} EXPORT ${PROJECT_EXPORT_NAME}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}/${PROJECT_INSTALL_PREFIX}
	LIBRARY DESTINATION ${CMAKE_INSTALL_BINDIR}/${PROJECT_INSTALL_PREFIX}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_INSTALL_PREFIX}
)